Jumbo
* make Manager a allow-all priv
* add funcopts to Table Request(...opts) (withACL, withFilters, withPaging...)
* remove the pager middleware... let handlers use page() directly
* add the withWriteIntent Table Request funcopt, to hint we need to join
on apps_responsibles instead of apps_publications
* fix primary key id regexp
* add /tags handlers to swagger
* add the delete /tags handler
